4.vote-ingress.yml
#Ingress for vote.k8sb36.xyz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "vote.k8sb36.xyz"
    - "www.k8sb36.xyz"
    secretName: wc-k8sb36-xyz
  rules:
  - host: vote.k8sb36.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: www.k8sb36.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80

#Ingress for naked k8sb36.xyz domain
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress-naked
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "k8sb36.xyz"
    secretName: nk-k8sb36-xyz
  rules:
  - host: k8sb36.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
